[gd_scene load_steps=10 format=3 uid="uid://c6pi0uarxp7ux"]

[ext_resource type="Script" path="res://Entities/bullet_3d.gd" id="1_fydqh"]
[ext_resource type="Texture2D" uid="uid://50x6lpr0pbuw" path="res://assets/catface2.png" id="1_ill23"]

[sub_resource type="SphereMesh" id="SphereMesh_obn04"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_36ift"]
transparency = 3
alpha_hash_scale = 1.0
alpha_antialiasing_mode = 0
cull_mode = 1
albedo_texture = ExtResource("1_ill23")

[sub_resource type="SphereShape3D" id="SphereShape3D_feph7"]
radius = 5.0

[sub_resource type="Animation" id="Animation_eej6o"]
resource_name = "Fade"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(10, 10, 10), Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)]
}

[sub_resource type="Animation" id="Animation_20uem"]
resource_name = "Hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(10, 10, 10), Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area3D:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area3D/CollisionShape3D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_notdf"]
resource_name = "Spawn"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area3D:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area3D/CollisionShape3D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeshInstance3D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12), Vector3(10, 10, 10)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k01js"]
_data = {
"Fade": SubResource("Animation_eej6o"),
"Hit": SubResource("Animation_20uem"),
"Spawn": SubResource("Animation_notdf")
}

[node name="Bullet3D" type="Node3D"]
transform = Transform3D(1, -3.48787e-16, 3.48787e-16, 3.48787e-16, 1, -3.48787e-16, -3.48787e-16, 3.48787e-16, 1, 0, 0, 0)
script = ExtResource("1_fydqh")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(13.3333, 0, 0, 0, 13.3333, 0, 0, 0, 13.3333, 0, 0, 0)
mesh = SubResource("SphereMesh_obn04")
surface_material_override/0 = SubResource("StandardMaterial3D_36ift")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 4
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_feph7")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k01js")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
